[gd_scene load_steps=9 format=3 uid="uid://cw7qgot6xgg2c"]

[ext_resource type="Texture2D" uid="uid://c3fs6ydy0awx3" path="res://bg_map/bg.png" id="1_qg5j4"]
[ext_resource type="Script" uid="uid://bgypucfomodqx" path="res://bg_map/bg_map.gd" id="1_tgcc6"]
[ext_resource type="PackedScene" uid="uid://bv4j3lorgwf04" path="res://player/player.tscn" id="3_0evb0"]
[ext_resource type="PackedScene" uid="uid://djik0uphrofgs" path="res://enemy/now_enemies.tscn" id="4_weknq"]
[ext_resource type="PackedScene" uid="uid://byk7s6nncema1" path="res://ui/game_ui.tscn" id="5_h1ert"]
[ext_resource type="PackedScene" uid="uid://dx33ov0j5tsn6" path="res://scenes/scene_update/scene_update.tscn" id="6_12x6b"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tgcc6"]
texture = ExtResource("1_qg5j4")
13:0/0 = 0
13:1/0 = 0
13:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -0.914044, -8, -1.21081, 8, -8, 8)
13:1/0/custom_data_0 = true
14:1/0 = 0
14:2/0 = 0
14:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 1.30182, 8, 1.00505, 8, 8, -8, 8)
14:2/0/custom_data_0 = true
13:2/0 = 0
14:0/0 = 0
14:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -0.47878, -0.221588, 0.312598, -8, -0.973392)
14:0/0/custom_data_0 = true
15:0/0 = 0
15:1/0 = 0
15:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(1.21081, -8, 8, -8, 8, 8, 1.40865, 8, 0.755678, 3.05583)
15:1/0/custom_data_0 = true
15:2/0 = 0
18:0/0 = 0
18:1/0 = 0
19:0/0 = 0
19:1/0 = 0
19:2/0 = 0
20:0/0 = 0
20:1/0 = 0
20:2/0 = 0
21:0/0 = 0
21:1/0 = 0
21:2/0 = 0
16:0/0 = 0
16:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.53746, 2.19212, 8, 1.00505, 8, 8, 1.75686, 8)
16:0/0/custom_data_0 = true
16:1/0 = 0
16:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, -0.47878, 1.9547, -2.65507, 0.273024, -8)
16:1/0/custom_data_0 = true
17:1/0 = 0
17:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -2.10111, -8, -2.99141, -0.973392, -8, -1.76477)
17:1/0/custom_data_0 = true
17:2/0 = 0
16:2/0 = 0
17:0/0 = 0
17:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 1.10398, -4.57417, 1.30182, -0.7162, 8, -8, 8)
17:0/0/custom_data_0 = true
5:2/0 = 0
6:2/0 = 0
9:3/0 = 0
9:4/0 = 0
8:4/0 = 0

[sub_resource type="TileSet" id="TileSet_0evb0"]
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 0
custom_data_layer_0/name = "isWall"
custom_data_layer_0/type = 1
sources/1 = SubResource("TileSetAtlasSource_tgcc6")

[node name="bg_map" type="Node2D"]
script = ExtResource("1_tgcc6")

[node name="game_ui" parent="." instance=ExtResource("5_h1ert")]

[node name="TileMap" type="TileMap" parent="." groups=["map"]]
scale = Vector2(6, 6)
tile_set = SubResource("TileSet_0evb0")
format = 2
layer_0/name = "bg1"
layer_0/tile_data = PackedInt32Array(0, 1179649, 0, 65536, 1179649, 0, 131072, 1179649, 0, 196608, 1179649, 0, 262144, 1179649, 0, 327680, 1179649, 0, 393216, 1179649, 0, 458752, 1179649, 0, 524288, 1179649, 0, 589824, 1179649, 0, 655360, 1179649, 0, 720896, 1179649, 0, 786432, 1179649, 0, 851968, 1179649, 0, 917504, 1179649, 0, 983040, 1179649, 0, 1048576, 1179649, 0, 1114112, 1179649, 0, 1179648, 1179649, 0, 1245184, 1179649, 0, 1310720, 1179649, 0, 1, 1179649, 0, 65537, 1179649, 0, 131073, 1179649, 0, 196609, 1179649, 0, 262145, 1179649, 0, 327681, 1179649, 0, 393217, 1179649, 0, 458753, 1179649, 0, 524289, 1179649, 0, 589825, 1179649, 0, 655361, 1179649, 0, 720897, 1179649, 0, 786433, 1179649, 0, 851969, 1179649, 0, 917505, 1179649, 0, 983041, 1179649, 0, 1048577, 1179649, 0, 1114113, 1179649, 0, 1179649, 1179649, 0, 1245185, 1179649, 0, 1310721, 1179649, 0, 2, 1179649, 0, 65538, 1179649, 0, 131074, 1179649, 0, 196610, 1179649, 0, 262146, 1179649, 0, 327682, 1179649, 0, 393218, 1179649, 0, 458754, 1179649, 0, 524290, 1179649, 0, 589826, 1179649, 0, 655362, 1179649, 0, 720898, 1179649, 0, 786434, 1179649, 0, 851970, 1179649, 0, 917506, 1179649, 0, 983042, 1179649, 0, 1048578, 1179649, 0, 1114114, 1179649, 0, 1179650, 1179649, 0, 1245186, 1179649, 0, 1310722, 1179649, 0, 3, 1179649, 0, 65539, 1179649, 0, 131075, 1179649, 0, 196611, 1179649, 0, 262147, 1179649, 0, 327683, 1179649, 0, 393219, 1179649, 0, 458755, 1179649, 0, 524291, 1179649, 0, 589827, 1179649, 0, 655363, 1179649, 0, 720899, 1179649, 0, 786435, 1179649, 0, 851971, 1179649, 0, 917507, 1179649, 0, 983043, 1179649, 0, 1048579, 1179649, 0, 1114115, 1179649, 0, 1179651, 1179649, 0, 1245187, 1179649, 0, 1310723, 1179649, 0, 4, 1179649, 0, 65540, 1179649, 0, 131076, 1179649, 0, 196612, 1179649, 0, 262148, 1179649, 0, 327684, 1179649, 0, 393220, 1179649, 0, 458756, 1179649, 0, 524292, 1179649, 0, 589828, 1179649, 0, 655364, 1179649, 0, 720900, 1179649, 0, 786436, 1179649, 0, 851972, 1179649, 0, 917508, 1179649, 0, 983044, 1179649, 0, 1048580, 1179649, 0, 1114116, 1179649, 0, 1179652, 1179649, 0, 1245188, 1179649, 0, 1310724, 1179649, 0, 5, 1179649, 0, 65541, 1179649, 0, 131077, 1179649, 0, 196613, 1179649, 0, 262149, 1179649, 0, 327685, 1179649, 0, 393221, 1179649, 0, 458757, 1179649, 0, 524293, 1179649, 0, 589829, 1179649, 0, 655365, 1179649, 0, 720901, 1179649, 0, 786437, 1179649, 0, 851973, 1179649, 0, 917509, 1179649, 0, 983045, 1179649, 0, 1048581, 1179649, 0, 1114117, 1179649, 0, 1179653, 1179649, 0, 1245189, 1179649, 0, 1310725, 1179649, 0, 6, 1179649, 0, 65542, 1179649, 0, 131078, 1179649, 0, 196614, 1179649, 0, 262150, 1179649, 0, 327686, 1179649, 0, 393222, 1179649, 0, 458758, 1179649, 0, 524294, 1179649, 0, 589830, 1179649, 0, 655366, 1179649, 0, 720902, 1179649, 0, 786438, 1179649, 0, 851974, 1179649, 0, 917510, 1179649, 0, 983046, 1179649, 0, 1048582, 1179649, 0, 1114118, 1179649, 0, 1179654, 1179649, 0, 1245190, 1179649, 0, 1310726, 1179649, 0, 7, 1179649, 0, 65543, 1179649, 0, 131079, 1179649, 0, 196615, 1179649, 0, 262151, 1179649, 0, 327687, 1179649, 0, 393223, 1179649, 0, 458759, 1179649, 0, 524295, 1179649, 0, 589831, 1179649, 0, 655367, 1179649, 0, 720903, 1179649, 0, 786439, 1179649, 0, 851975, 1179649, 0, 917511, 1179649, 0, 983047, 1179649, 0, 1048583, 1179649, 0, 1114119, 1179649, 0, 1179655, 1179649, 0, 1245191, 1179649, 0, 1310727, 1179649, 0, 8, 1179649, 0, 65544, 1179649, 0, 131080, 1179649, 0, 196616, 1179649, 0, 262152, 1179649, 0, 327688, 1179649, 0, 393224, 1179649, 0, 458760, 1179649, 0, 524296, 1179649, 0, 589832, 1179649, 0, 655368, 1179649, 0, 720904, 1179649, 0, 786440, 1179649, 0, 851976, 1179649, 0, 917512, 1179649, 0, 983048, 1179649, 0, 1048584, 1179649, 0, 1114120, 1179649, 0, 1179656, 1179649, 0, 1245192, 1179649, 0, 1310728, 1179649, 0, 9, 1179649, 0, 65545, 1179649, 0, 131081, 1179649, 0, 196617, 1179649, 0, 262153, 1179649, 0, 327689, 1179649, 0, 393225, 1179649, 0, 458761, 1179649, 0, 524297, 1179649, 0, 589833, 1179649, 0, 655369, 1179649, 0, 720905, 1179649, 0, 786441, 1179649, 0, 851977, 1179649, 0, 917513, 1179649, 0, 983049, 1179649, 0, 1048585, 1179649, 0, 1114121, 1179649, 0, 1179657, 1179649, 0, 1245193, 1179649, 0, 1310729, 1179649, 0, 10, 1179649, 0, 65546, 1179649, 0, 131082, 1179649, 0, 196618, 1179649, 0, 262154, 1179649, 0, 327690, 1179649, 0, 393226, 1179649, 0, 458762, 1179649, 0, 524298, 1179649, 0, 589834, 1179649, 0, 655370, 1179649, 0, 720906, 1179649, 0, 786442, 1179649, 0, 851978, 1179649, 0, 917514, 1179649, 0, 983050, 1179649, 0, 1048586, 1179649, 0, 1114122, 1179649, 0, 1179658, 1179649, 0, 1245194, 1179649, 0, 1310730, 1179649, 0, 11, 1179649, 0, 65547, 1179649, 0, 131083, 1179649, 0, 196619, 1179649, 0, 262155, 1179649, 0, 327691, 1179649, 0, 393227, 1179649, 0, 458763, 1179649, 0, 524299, 1179649, 0, 589835, 1179649, 0, 655371, 1179649, 0, 720907, 1179649, 0, 786443, 1179649, 0, 851979, 1179649, 0, 917515, 1179649, 0, 983051, 1179649, 0, 1048587, 1179649, 0, 1114123, 1179649, 0, 1179659, 1179649, 0, 1245195, 1179649, 0, 1310731, 1179649, 0, 12, 1179649, 0, 65548, 1179649, 0, 131084, 1179649, 0, 196620, 1179649, 0, 262156, 1179649, 0, 327692, 1179649, 0, 393228, 1179649, 0, 458764, 1179649, 0, 524300, 1179649, 0, 589836, 1179649, 0, 655372, 1179649, 0, 720908, 1179649, 0, 786444, 1179649, 0, 851980, 1179649, 0, 917516, 1179649, 0, 983052, 1179649, 0, 1048588, 1179649, 0, 1114124, 1179649, 0, 1179660, 1179649, 0, 1245196, 1179649, 0, 1310732, 1179649, 0, 13, 1179649, 0, 65549, 1179649, 0, 131085, 1179649, 0, 196621, 1179649, 0, 262157, 1179649, 0, 327693, 1179649, 0, 393229, 1179649, 0, 458765, 1179649, 0, 524301, 1179649, 0, 589837, 1179649, 0, 655373, 1179649, 0, 720909, 1179649, 0, 786445, 1179649, 0, 851981, 1179649, 0, 917517, 1179649, 0, 983053, 1179649, 0, 1048589, 1179649, 0, 1114125, 1179649, 0, 1179661, 1179649, 0, 1245197, 1179649, 0, 1310733, 1179649, 0, 14, 1179649, 0, 65550, 1179649, 0, 131086, 1179649, 0, 196622, 1179649, 0, 262158, 1179649, 0, 327694, 1179649, 0, 393230, 1179649, 0, 458766, 1179649, 0, 524302, 1179649, 0, 589838, 1179649, 0, 655374, 1179649, 0, 720910, 1179649, 0, 786446, 1179649, 0, 851982, 1179649, 0, 917518, 1179649, 0, 983054, 1179649, 0, 1048590, 1179649, 0, 1114126, 1179649, 0, 1179662, 1179649, 0, 1245198, 1179649, 0, 1310734, 1179649, 0, 15, 1179649, 0, 65551, 1179649, 0, 131087, 1179649, 0, 196623, 1179649, 0, 262159, 1179649, 0, 327695, 1179649, 0, 393231, 1179649, 0, 458767, 1179649, 0, 524303, 1179649, 0, 589839, 1179649, 0, 655375, 1179649, 0, 720911, 1179649, 0, 786447, 1179649, 0, 851983, 1179649, 0, 917519, 1179649, 0, 983055, 1179649, 0, 1048591, 1179649, 0, 1114127, 1179649, 0, 1179663, 1179649, 0, 1245199, 1179649, 0, 1310735, 1179649, 0, 16, 1179649, 0, 65552, 1179649, 0, 131088, 1179649, 0, 196624, 1179649, 0, 262160, 1179649, 0, 327696, 1179649, 0, 393232, 1179649, 0, 458768, 1179649, 0, 524304, 1179649, 0, 589840, 1179649, 0, 655376, 1179649, 0, 720912, 1179649, 0, 786448, 1179649, 0, 851984, 1179649, 0, 917520, 1179649, 0, 983056, 1179649, 0, 1048592, 1179649, 0, 1114128, 1179649, 0, 1179664, 1179649, 0, 1245200, 1179649, 0, 1310736, 1179649, 0, 17, 1179649, 0, 65553, 1179649, 0, 131089, 1179649, 0, 196625, 1179649, 0, 262161, 1179649, 0, 327697, 1179649, 0, 393233, 1179649, 0, 458769, 1179649, 0, 524305, 1179649, 0, 589841, 1179649, 0, 655377, 1179649, 0, 720913, 1179649, 0, 786449, 1179649, 0, 851985, 1179649, 0, 917521, 1179649, 0, 983057, 1179649, 0, 1048593, 1179649, 0, 1114129, 1179649, 0, 1179665, 1179649, 0, 1245201, 1179649, 0, 1310737, 1179649, 0, 18, 1179649, 0, 65554, 1179649, 0, 131090, 1179649, 0, 196626, 1179649, 0, 262162, 1179649, 0, 327698, 1179649, 0, 393234, 1179649, 0, 458770, 1179649, 0, 524306, 1179649, 0, 589842, 1179649, 0, 655378, 1179649, 0, 720914, 1179649, 0, 786450, 1179649, 0, 851986, 1179649, 0, 917522, 1179649, 0, 983058, 1179649, 0, 1048594, 1179649, 0, 1114130, 1179649, 0, 1179666, 1179649, 0, 1245202, 1179649, 0, 1310738, 1179649, 0, 19, 1179649, 0, 65555, 1179649, 0, 131091, 1179649, 0, 196627, 1179649, 0, 262163, 1179649, 0, 327699, 1179649, 0, 393235, 1179649, 0, 458771, 1179649, 0, 524307, 1179649, 0, 589843, 1179649, 0, 655379, 1179649, 0, 720915, 1179649, 0, 786451, 1179649, 0, 851987, 1179649, 0, 917523, 1179649, 0, 983059, 1179649, 0, 1048595, 1179649, 0, 1114131, 1179649, 0, 1179667, 1179649, 0, 1245203, 1179649, 0, 1310739, 1179649, 0, 20, 1179649, 0, 65556, 1179649, 0, 131092, 1179649, 0, 196628, 1179649, 0, 262164, 1179649, 0, 327700, 1179649, 0, 393236, 1179649, 0, 458772, 1179649, 0, 524308, 1179649, 0, 589844, 1179649, 0, 655380, 1179649, 0, 720916, 1179649, 0, 786452, 1179649, 0, 851988, 1179649, 0, 917524, 1179649, 0, 983060, 1179649, 0, 1048596, 1179649, 0, 1114132, 1179649, 0, 1179668, 1179649, 0, 1245204, 1179649, 0, 1310740, 1179649, 0, 21, 1179649, 0, 65557, 1179649, 0, 131093, 1179649, 0, 196629, 1179649, 0, 262165, 1179649, 0, 327701, 1179649, 0, 393237, 1179649, 0, 458773, 1179649, 0, 524309, 1179649, 0, 589845, 1179649, 0, 655381, 1179649, 0, 720917, 1179649, 0, 786453, 1179649, 0, 851989, 1179649, 0, 917525, 1179649, 0, 983061, 1179649, 0, 1048597, 1179649, 0, 1114133, 1179649, 0, 1179669, 1179649, 0, 1245205, 1179649, 0, 1310741, 1179649, 0, 22, 1179649, 0, 65558, 1179649, 0, 131094, 1179649, 0, 196630, 1179649, 0, 262166, 1179649, 0, 327702, 1179649, 0, 393238, 1179649, 0, 458774, 1179649, 0, 524310, 1179649, 0, 589846, 1179649, 0, 655382, 1179649, 0, 720918, 1179649, 0, 786454, 1179649, 0, 851990, 1179649, 0, 917526, 1179649, 0, 983062, 1179649, 0, 1048598, 1179649, 0, 1114134, 1179649, 0, 1179670, 1179649, 0, 1245206, 1179649, 0, 1310742, 1179649, 0, 23, 1179649, 0, 65559, 1179649, 0, 131095, 1179649, 0, 196631, 1179649, 0, 262167, 1179649, 0, 327703, 1179649, 0, 393239, 1179649, 0, 458775, 1179649, 0, 524311, 1179649, 0, 589847, 1179649, 0, 655383, 1179649, 0, 720919, 1179649, 0, 786455, 1179649, 0, 851991, 1179649, 0, 917527, 1179649, 0, 983063, 1179649, 0, 1048599, 1179649, 0, 1114135, 1179649, 0, 1179671, 1179649, 0, 1245207, 1179649, 0, 1310743, 1179649, 0, 24, 1179649, 0, 65560, 1179649, 0, 131096, 1179649, 0, 196632, 1179649, 0, 262168, 1179649, 0, 327704, 1179649, 0, 393240, 1179649, 0, 458776, 1179649, 0, 524312, 1179649, 0, 589848, 1179649, 0, 655384, 1179649, 0, 720920, 1179649, 0, 786456, 1179649, 0, 851992, 1179649, 0, 917528, 1179649, 0, 983064, 1179649, 0, 1048600, 1179649, 0, 1114136, 1179649, 0, 1179672, 1179649, 0, 1245208, 1179649, 0, 1310744, 1179649, 0, 25, 1179649, 0, 65561, 1179649, 0, 131097, 1179649, 0, 196633, 1179649, 0, 262169, 1179649, 0, 327705, 1179649, 0, 393241, 1179649, 0, 458777, 1179649, 0, 524313, 1179649, 0, 589849, 1179649, 0, 655385, 1179649, 0, 720921, 1179649, 0, 786457, 1179649, 0, 851993, 1179649, 0, 917529, 1179649, 0, 983065, 1179649, 0, 1048601, 1179649, 0, 1114137, 1179649, 0, 1179673, 1179649, 0, 1245209, 1179649, 0, 1310745, 1179649, 0)
layer_1/name = "bg2"
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(524289, 1179649, 1, 720897, 1179649, 1, 851969, 1179649, 1, 1048577, 1179649, 1, 2, 1179649, 1, 327684, 1179649, 1, 655364, 1179649, 1, 262149, 1179649, 1, 1179653, 1179649, 1, 65542, 1179649, 1, 196614, 1179649, 1, 917510, 1179649, 1, 1179654, 1179649, 1, 1310728, 1179649, 1, 65546, 1179649, 1, 589834, 1179649, 1, 983052, 1179649, 1, 65549, 1179649, 1, 589837, 1179649, 1, 917517, 1179649, 1, 655374, 1179649, 1, 786447, 1179649, 1, 851983, 1179649, 1, 262161, 1179649, 1, 327697, 1179649, 1, 917521, 1179649, 1, 1114129, 1179649, 1, 18, 1179649, 1, 589843, 1179649, 1, 65557, 1179649, 1, 589845, 1179649, 1, 196631, 1179649, 1, 458777, 1179649, 1)
layer_2/name = "wall"
layer_2/z_index = 2
layer_2/tile_data = PackedInt32Array(65535, 983041, 1, 131071, 983041, 1, 196607, 983041, 1, 262143, 983041, 1, 327679, 983041, 1, 393215, 983041, 1, 458751, 983041, 1, 524287, 983041, 1, 589823, 983041, 1, 655359, 983041, 1, 720895, 983041, 1, 786431, 983041, 1, 851967, 983041, 1, 917503, 983041, 1, 983039, 983041, 1, 1048575, 983041, 1, 1114111, 983041, 1, 1179647, 983041, 1, 1245183, 983041, 1, 1310719, 983041, 1, 1376255, 983041, 1, 26, 851969, 1, 65562, 851969, 1, 131098, 851969, 1, 196634, 851969, 1, 262170, 851969, 1, 327706, 851969, 1, 393242, 851969, 1, 458778, 851969, 1, 524314, 851969, 1, 589850, 851969, 1, 655386, 851969, 1, 720922, 851969, 1, 786458, 851969, 1, 851994, 851969, 1, 917530, 851969, 1, 983066, 851969, 1, 1048602, 851969, 1, 1114138, 851969, 1, 1179674, 851969, 1, 1245210, 851969, 1, 1310746, 851969, 1, -65536, 917505, 2, -65535, 917505, 2, -65534, 917505, 2, -65533, 917505, 2, -65532, 917505, 2, -65531, 917505, 2, -65530, 917505, 2, -65529, 917505, 2, -65528, 917505, 2, -65527, 917505, 2, -65526, 917505, 2, -65525, 917505, 2, -65524, 917505, 2, -65523, 917505, 2, -65522, 917505, 2, -65521, 917505, 2, -65520, 917505, 2, -65519, 917505, 2, -65518, 917505, 2, -65517, 917505, 2, -65516, 917505, 2, -65515, 917505, 2, -65514, 917505, 2, -65513, 917505, 2, -65512, 917505, 2, -65511, 917505, 2, 1376256, 917505, 0, 1376257, 917505, 0, 1376258, 917505, 0, 1376259, 917505, 0, 1376260, 917505, 0, 1376261, 917505, 0, 1376262, 917505, 0, 1376263, 917505, 0, 1376264, 917505, 0, 1376265, 917505, 0, 1376266, 917505, 0, 1376267, 917505, 0, 1376268, 917505, 0, 1376269, 917505, 0, 1376270, 917505, 0, 1376271, 917505, 0, 1376272, 917505, 0, 1376273, 917505, 0, 1376274, 917505, 0, 1376275, 917505, 0, 1376276, 917505, 0, 1376277, 917505, 0, 1376278, 917505, 0, 1376279, 917505, 0, 1376280, 917505, 0, 1376281, 917505, 0, 1441791, 1048577, 1, 1376282, 1114113, 1, -1, 1048577, 0, -65510, 1114113, 0)

[node name="player" parent="." instance=ExtResource("3_0evb0")]
position = Vector2(1215, 933)

[node name="now_enemies" parent="." instance=ExtResource("4_weknq")]

[node name="scene_update" parent="." instance=ExtResource("6_12x6b")]
visible = false

[connection signal="round_end" from="game_ui" to="." method="_on_game_ui_round_end"]
[connection signal="continue_game" from="scene_update" to="." method="_on_scene_update_continue_game"]
